[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "_version.py"

[tool.black]
line-length = 95
target-version = ["py312"]
extend-exclude = '''^(.*\/)*\b(migrations)\b($|\/.*$)'''

[tool.isort]
profile = "black"
py_version = "312"
skip = [".tox", ".eggs", "migrations"]

[tool.coverage.run]
parallel = false
branch = true
source = ["edc_auth"]

[tool.coverage.paths]
source = ["edc_auth"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["requirements.txt"]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py{312,313}-dj{51,dev},
    lint
    pre-commit

isolated_build = true

[gh-actions]
python =
    3.12: py312, lint, pre-commit
    3.13: py313

[gh-actions:env]
DJANGO =
    5.1: dj51
    dev: djdev, lint, pre-commit

[testenv]
deps =
    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/tox.txt
    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/test_utils.txt
    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/edc.txt
    dj51: Django>=5.1,<5.2
    djdev: https://github.com/django/django/tarball/main

commands =
    pip install -U pip
    python --version
    pip --version
    pip freeze
    coverage run -a runtests.py
    coverage report

[testenv:lint]
deps = -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/lint.txt
commands =
    python --version
    pip --version
    pip freeze
    isort --profile=black --check --diff .
    black --check --diff .
    flake8 .

[testenv:pre-commit]
deps = pre-commit
commands =
    python --version
    pip --version
    pip freeze
    pre-commit autoupdate
    pre-commit run --all-files
"""
