[metadata]
name = edc-auth
version = attr: _version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = https://github.com/clinicedc/edc-auth
license = GPL license, see LICENSE
description = Authentication for clinicedc/edc projects
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django authentication permissions roles clinicedc clinical trials
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
python_requires = >=3.10
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    mempass

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    edc_auth.tests*

[flake8]
ignore = E226,W503,E203
max-line-length = 95
max-complexity = 12
exclude = */migrations/*,.tox,.git,__pycache__,build,dist,.eggs
per-file-ignores = __init__.py: F401
